compiler/tests/fail/stack_allocation/x86-64/bad_alignment.jazz
fn f (reg ptr u64[2] r) -> reg u32 {
  reg u32 res;
  stack u64[2] a;
  stack u32[10] b;
  a[0]=0;
  b[1:2] = a[u32 0:2];
  res = b[1];
  return res;
}

export fn main() -> reg 32 {
  stack u64[2] s;
  reg u32 r;
  r = f(s);
  return r;
}
